--- a/JavaScript Applications/06.Routing/01.Furniture/index.html
+++ b/JavaScript Applications/06.Routing/01.Furniture/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1><a href="/">Furniture Store</a></h1>
+        <h1><a href="javascript:void(0)">Furniture Store</a></h1>
         <nav>
             <a id="catalogLink" href="/catalog" class="active">Dashboard</a>
             <div id="user">
