Second try to fix this task :)

--- a/JavaScript Applications/03.SPA/01.Forum/index.html
+++ b/JavaScript Applications/03.SPA/01.Forum/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3cd69e2433.js" crossorigin="anonymous"></script>
+    <script src="app.js" type="module"></script>
     <title>SoftUni Forum</title>
 </head>
 
@@ -25,49 +26,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="/">Home</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <!-- homepage -->
-    <div class="container">
-        <main>
-            <div class="new-topic-border">
-                <div class="header-background">
-                    <span>New Topic</span>
-                </div>
-                <form>
-                    <div class="new-topic-title">
-                        <label for="topicName">Title <span class="red">*</span></label>
-                        <input type="text" name="topicName" id="topicName">
-                    </div>
-                    <div class="new-topic-title">
-                        <label for="username">Username <span class="red">*</span></label>
-                        <input type="text" name="username" id="username">
-                    </div>
-                    <div class="new-topic-content">
-                        <label for="postText">Post <span class="red">*</span></label>
-                        <textarea type="text" name="postText" id="postText" rows="8" class="height"></textarea>
-                    </div>
-                    <div class="new-topic-buttons">
-                        <button class="cancel">Cancel</button>
-                        <button class="public">Post</button>
-                    </div>
-
-                </form>
-            </div>
-
-            <div class="topic-title">
-
-                <!-- topic component  -->
-                <div class="topic-container">
-                    
-                </div>
-                
-
-        </main>
+    <div id="root">
 
     </div>
 
