--- a/JavaScript Applications/03.SPA/01.Forum/index.html
+++ b/JavaScript Applications/03.SPA/01.Forum/index.html
@@ -26,7 +26,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a id="homeBtn" href="/home">Home</a>
                 </li>
             </ul>
         </nav>
