--- a/JavaScript Applications/Exam Prep/Retake Exam - 15 August 2022/index.html
+++ b/JavaScript Applications/Exam Prep/Retake Exam - 15 August 2022/index.html
@@ -13,7 +13,7 @@
       <header class="header-navigation">
       </header>
 
-      <main>
+      <main id="root">
         
       </main>
     </div>
